--- a/pages/18923.html
+++ b/pages/18923.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      function set in nLab
+      Surreal space in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      function set
+      Surreal space
   </h1>
 
 
@@ -308,135 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
-
-<h4 id='mapping_space'>Mapping space</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/internal+hom'>mapping space</a></strong></p>
-
-<h3 id='general_abstract'>General abstract</h3>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/hom-set'>hom-set</a>, <a class='existingWikiWord' href='/nlab/show/hom-object'>hom-object</a>, <a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom</a>, <a class='existingWikiWord' href='/nlab/show/exponential+object'>exponential object</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-categorical+hom-space'>derived hom-space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/loop+space+object'>loop space object</a>, <a class='existingWikiWord' href='/nlab/show/free+loop+space+object'>free loop space object</a>, <a class='existingWikiWord' href='/nlab/show/derived+loop+space'>derived loop space</a></p>
-</li>
-</ul>
-
-<h3 id='topology'>Topology</h3>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/topology+of+mapping+spaces'>topology of mapping spaces</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/compact-open+topology'>compact-open topology</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/evaluation+fibration+of+mapping+spaces'>evaluation fibration of mapping spaces</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/loop+space'>loop space</a>, <a class='existingWikiWord' href='/nlab/show/free+loop+space'>free loop space</a></p>
-</li>
-</ul>
-
-<h3 id='differential_topology'>Differential topology</h3>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/differential+topology+of+mapping+spaces'>differential topology of mapping spaces</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/C-infinity+topology'>C-k topology</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/manifold+structure+of+mapping+spaces'>manifold structure of mapping spaces</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/tangent+spaces+of+mapping+spaces'>tangent spaces of mapping spaces</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+loop+space'>smooth loop space</a></p>
-</li>
-</ul>
-
-<h3 id='stable_homotopy_theory'>Stable homotopy theory</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/function+spectrum'>mapping spectrum</a></li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/mapping+space+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
-</div>
-</div>
-
-<h1 id='function_sets'>Function sets</h1>
-<div class='maruku_toc'><ul><li><a href='#definitions'>Definitions</a></li><li><a href='#generalisations'>Generalisations</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='definitions'>Definitions</h2>
-
-<p>Given <a class='existingWikiWord' href='/nlab/show/set'>sets</a> <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>, the <strong>function set</strong> <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mi>B</mi></msup></mrow><annotation encoding='application/x-tex'>A^B</annotation></semantics></math> is the set of all <a class='existingWikiWord' href='/nlab/show/function'>functions</a> from <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>. In the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> of mathematics, the existence of such a set may be taken to follow from the existence of <a class='existingWikiWord' href='/nlab/show/power+set'>power sets</a>, from the axiom of <a class='existingWikiWord' href='/nlab/show/subset+collection'>subset collection</a>, or as an axiom (the <strong>axiom of function sets</strong>) in its own right.</p>
-
-<h2 id='generalisations'>Generalisations</h2>
-
-<p>Thinking of <a class='existingWikiWord' href='/nlab/show/Set'>Set</a> as a <a class='existingWikiWord' href='/nlab/show/locally+small+category'>locally small category</a>, this is a special case of a <a class='existingWikiWord' href='/nlab/show/hom-set'>hom-set</a>. Thinking of <math class='maruku-mathml' display='inline' id='mathml_c092a6fb7b5a886238720cac42d5757292fdaa58_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='0em' rspace='thinmathspace'>Set</mo></mrow><annotation encoding='application/x-tex'>\Set</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/cartesian+closed+category'>cartesian closed category</a>, this is a special case of an <a class='existingWikiWord' href='/nlab/show/exponential+object'>exponential object</a>, which is a special case of an <a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom</a>.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/function+type'>function type</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/internal+hom'>internal hom</a></p>
-</li>
-</ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/foundational+axiom'>foundational axiom</a></div></p>
-
-<p>
- 
- 
- 
-</p>
-
-<p>
-</p>
+    <p>A surreal space <math class='maruku-mathml' display='inline' id='mathml_c2049d9601727d4dca88fe04d1449532342ba433_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{S}^n</annotation></semantics></math> can be seen as a topologically enriched category of the real space <math class='maruku-mathml' display='inline' id='mathml_c2049d9601727d4dca88fe04d1449532342ba433_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{R}^n</annotation></semantics></math>. We write <math class='maruku-mathml' display='inline' id='mathml_c2049d9601727d4dca88fe04d1449532342ba433_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> to denote it.</p>
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 17:14:54 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  Revised on January  8, 2018 17:46:18 
+  by <span class="newWikiWord">Hammad Rana<a href="/nlab/new/Hammad+Rana">?</a></span>
+  (2600:1005:b024:7164:940a:b5aa:5e4b:ea83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/function+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/function+set/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/function+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/function+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Surreal+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+space/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Surreal+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/function+set" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Surreal+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/function+set" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Surreal+space" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/function+set" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Surreal+space" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
