--- a/pages/18923.html
+++ b/pages/18923.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,22 +312,22 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#construction'>Construction</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Surreal spaces are essentially spaces of surreal numbers.</p>
+<p>A surreal space is essentially the space of <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal numbers</a>. The arithmetic properties of the surreals of course follow suit in this space. We denote the surreal space as <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{S}^n</annotation></semantics></math></p>
 
-<p>A surreal space <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{S}^n</annotation></semantics></math> can be seen as a topologically enriched category of a real space <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{R}^n</annotation></semantics></math>. We write <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> to denote it. Its objects are all the infinitely near points of <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{R}^n</annotation></semantics></math>, and all vector spaces over ordered fields. In fact, <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> is a vector space over the reals. It is an equivalence relation acting on the reals and forms enriched modules over them. Given the concept of a topological space blended with this notion we thus have a ringed space. Kruskal demonstrated that the surreals describe the asymptotic behavior of the reals. From this we can see this as part of the objects in <math class='maruku-mathml' display='inline' id='mathml_06bab3daf9eaf78a46232ac1ebb077d58b31d007_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math>.</p>
+<p>Surreal space (denoted as <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{S}^n</annotation></semantics></math>) can be seen as a topologically enriched category of a real space <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{R}^n</annotation></semantics></math>. We write <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> to denote it. Its objects are all the infinitely near points of <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>{R}^n</annotation></semantics></math>, and all vector spaces over ordered fields. In fact, <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math> is a vector space over the reals. It is an equivalence relation acting on the reals and forms enriched modules over them. Given the concept of a topological space blended with this notion we thus have a ringed space. Kruskal demonstrated that the surreals describe the asymptotic behavior of the reals. From this we can see this as part of the objects in <math class='maruku-mathml' display='inline' id='mathml_b044d4cb8a950cefe3317db07c504b448518c7bc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sur</mi></mrow><annotation encoding='application/x-tex'>{Sur}</annotation></semantics></math>.</p>
 
 <h2 id='construction'>Construction</h2>
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 18:31:12 
+  Revised on January  8, 2018 20:57:40 
   by <span class="newWikiWord">Hammad Rana<a href="/nlab/new/Hammad+Rana">?</a></span>
   (2600:1005:b024:7164:940a:b5aa:5e4b:ea83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Surreal+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+space/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Surreal+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Surreal+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Surreal+space/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Surreal+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Surreal+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
