--- a/pages/18926.html
+++ b/pages/18926.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      integration by parts in nLab
+      interacting field theory in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      integration by parts
+      interacting field theory
   </h1>
 
 
@@ -308,55 +308,47 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A <em><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></em> is <em>interacting</em> if it is not a <em><a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a></em>.</p>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/observable'>algebras of observables</a> of interacting field theories are <span class='newWikiWord'>quantized<a href='/nlab/new/quantized'>?</a></span> as <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series</a> in <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> and in the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> (<a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a>), as a formal expansion around the quantizaton of a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> (<a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a>).</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/integral'>integration</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/formal+adjoint+differential+operator'>formally adjoint differential operator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/derivative+of+a+distribution'>derivative of a distribution</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
 </li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<p>See also</p>
-
-<ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Integration_by_parts'>Integration by parts</a></em></li>
-</ul>
-
 <p>
-</p>
-
-<p>
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on January  9, 2018 07:00:25 
+  Created on January  9, 2018 07:53:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integration+by+parts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integration+by+parts/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/integration+by+parts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integration+by+parts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/interacting+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/integration+by+parts" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/interacting+field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/integration+by+parts" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/interacting+field+theory" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/integration+by+parts" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/interacting+field+theory" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
