--- a/pages/3819.html
+++ b/pages/3819.html
@@ -923,7 +923,7 @@ margin-left: 0em;
 <p>In <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/observable'>algebras of observables</a> are meant to be <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebras</a>, while in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a>) they are <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series algebras</a>.</p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/type'>types</a> of <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a></strong>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_db39c0491b5b639802a67af3770a001fccb12d1c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='local+observable'>local</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd><mtext><a href='field+observable'>field</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='linear+observable'>linear</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='microcausal+polynomial+observable'>microcausal</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='polynomial+observable'>polynomial</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='observable'>general</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='regular+polynomial+observable'>regular</a></mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dfa342534674c489bbcc36883c666f53fd74ad73_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='local+observable'>local</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd><mtext><a href='field+observable'>field</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='linear+observable'>linear</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='microcausal+polynomial+observable'>microcausal</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='polynomial+observable'>polynomial</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='observable'>general</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='regular+polynomial+observable'>regular</a></mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp;&amp;
     \text{&lt;a href=&quot;local+observable&quot;&gt;local&lt;/a&gt;}
@@ -987,7 +987,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a>, <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra of observables</a></p>
 </li>
 
 <li>
@@ -1037,14 +1037,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 12:12:14 
+  Revised on January 10, 2018 07:41:02 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/observable" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/observable/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/observable" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/observable" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/observable" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/observable/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/observable" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/observable" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
