--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1264,13 +1264,19 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a> term.</p>
+<p>the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a> term with <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> given by the <a class='existingWikiWord' href='/nlab/show/fine+structure+constant'>fine structure constant</a>.</p>
 </li>
 </ol>
+
+<p>See at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>A first idea of quantum field theory</a></em> <a href='A+first+idea+of+quantum+field+theory#LagrangianQED'>this example</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fine+structure+constant'>fine structure constant</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/photon+propagator'>photon propagator</a></p>
 </li>
@@ -1391,14 +1397,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2018 08:21:24 
+  Revised on January 11, 2018 09:52:22 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
