--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,20 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/files/GiventalQuantomorphism.jpg' title=''></a></p>
-
-<p><img src='https://ncatlab.org/nlab/files/GiventalQuantomorphism.jpg'/></p>
+    <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a></th><th><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></th><th><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> element</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/phi%5En+interaction'>phi^n theory</a></td><td style='text-align: left;'>exp. \ref{phintheoryLagrangian}</td><td style='text-align: left;'>expl. \ref{InWickAlgebraphinInteraction}</td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a></td><td style='text-align: left;'>expl. \ref{LagrangianQED}</td><td style='text-align: left;'>expl. \ref{InWickAlgebraElectronPhotonInteraction}</td></tr>
+</tbody></table>
 </div>
 
 <div class="revisedby">
-  Revised on January  9, 2018 06:30:33 
+  Revised on January 11, 2018 11:22:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1379" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1379 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1380" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1380 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
