--- a/pages/18539.html
+++ b/pages/18539.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -537,7 +537,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
@@ -663,16 +663,32 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#causal_locality_of_interacting_field_quantum_observables'>Causal locality of interacting field quantum observables</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The algebra of <a class='existingWikiWord' href='/nlab/show/observable'>algebra of quantum observables</a> of a <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> with non-trivial <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> is often called the <em>interacting field algebra</em>, in contrast to the <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> for non-interacting <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free fields</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> of an <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a> constructed as a <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation</a> of the <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> <a class='existingWikiWord' href='/nlab/show/observable'>of observables</a> of a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> is called, for emphasis, the <em>interacting field algebra of observables</em>, often just “interacting field algebra”, for short.</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the interacting field algebra may be constructed from the <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> by “conjugation” with the <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> of the interaction. A mathematically rigorous formulation of this construction is the content of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>/<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>locally covariant perturbative quantum field theory</a>.</p>
+<p>In terms of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, the interacting field algebra is obtained from the free field <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> of observables and the <a class='existingWikiWord' href='/nlab/show/S-matrix'>perturbative S-matrix</a> by <a class='existingWikiWord' href='/nlab/show/differentiation'>differentiating</a> <em><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></em>, yielding a <em><a class='existingWikiWord' href='/nlab/show/M%C3%B8ller+operator'>Møller operator</a></em>.</p>
 
-<p>More abstractly, the interacting field algebra in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> is simply the (<a class='existingWikiWord' href='/nlab/show/Fedosov%27s+deformation+quantization'>Fedosov</a>-)<a class='existingWikiWord' href='/nlab/show/deformation+quantization'>formal deformation quantization</a> of the algebra of <a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal functionals</a> induced on the <a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a> of the given interating <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a>. That this general <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> prescription is in fact equivalent to the traditional construction via the <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> was shown in (<a href='#Collini16'>Collini 16</a>, <a href='#HawkinsRejzner16'>Hawkins-Rejzner 16</a>).</p>
+<p>More abstractly, the algebra of observables is the <a class='existingWikiWord' href='/nlab/show/deformation+quantization'>formal deformation quantization</a> (specifically <a class='existingWikiWord' href='/nlab/show/Fedosov%27s+deformation+quantization'>Fedosov deformation quantization</a>) of the <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a> (<a href='#Collini16'>Collini 16</a>, <a href='#HawkinsRejzner16'>Hawkins-Rejzner 16</a>).</p>
 
-<p>(…)</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_edf8f8f4223058a915d19384f26a851de5eabd59_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<h2 id='properties'>Properties</h2>
+
+<h3 id='causal_locality_of_interacting_field_quantum_observables'>Causal locality of interacting field quantum observables</h3>
+
+<div class='num_prop' id='CausalLocalityOfBogoliubovFormula'>
+<h6 id='proposition'>Proposition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a>)</strong></p>
+
+<p>As the spacetime support varies, the algebras of <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field quantum observables</a> spanned via the Bogoliubov formula consistitute a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>causally local net of observables</a>, hence an instance of <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a>.</p>
+</div>
+
+<p>(<a href='#DuetschFredenhagen00'>Dütsch-Fredenhagen 00, section 3</a>, following <a href='#BrunettiFredenhagen99'>Brunetti-Fredenhagen 99, section 8</a>, <a href='#IlinSlavnov78'>Il’in-Slavnov 78</a>)</p>
+
+<p>For <strong><a class='existingWikiWord' href='/nlab/show/proof'>proof</a></strong> see <a href='S-matrix#PerturbativeQuantumObservablesIsLocalnet'>this prop.</a> at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -689,8 +705,31 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Dirac+interaction+picture'>interaction picture</a></p>
 </li>
 </ul>
-
+<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_edf8f8f4223058a915d19384f26a851de5eabd59_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> (<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a>)</td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting quantum observables</a></td></tr>
+</tbody></table>
 <h2 id='references'>References</h2>
+
+<p>The observation that the pertruabtive interacting field quantum observables form a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>causally local net of quantum observables</a> is due to</p>
+
+<ul>
+<li id='IlinSlavnov78'>V. A. Il’in and D. S. Slavnov, <em>Observable algebras in the S-matrix approach</em>, Theor. Math. Phys. 36 (1978) 32. (<a href='http://inspirehep.net/record/135575'>spire</a>, <a href='http://dx.doi.org/10.1007/BF01035870'>doi</a>)</li>
+</ul>
+
+<p>then rediscovered in</p>
+
+<ul>
+<li id='BrunettiFredenhagen00'><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Microlocal Analysis and Interacting Quantum Field Theories: Renormalization on Physical Backgrounds</em>, Commun. Math. Phys. 208 : 623-661, 2000 (<a href='https://arxiv.org/abs/math-ph/9903028'>math-ph/9903028</a>)</li>
+</ul>
+
+<p>and made more explicit in</p>
+
+<ul>
+<li id='DuetschFredenhagen00'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Algebraic Quantum Field Theory, Perturbation Theory, and the Loop Expansion</em>, Commun.Math.Phys. 219 (2001) 5-30 (<a href='https://arxiv.org/abs/hep-th/0001129'>arXiv:hep-th/0001129</a>)</li>
+</ul>
+
+<p>The observation that these algebras are the <a class='existingWikiWord' href='/nlab/show/deformation+quantization'>formal deformation quantization</a> of the interacting field theory is due to</p>
 
 <ul>
 <li id='Collini16'>
@@ -703,6 +742,29 @@ margin-left: 0em;
 </ul>
 
 <p>
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
+
+<p>
  
 </p>
 
@@ -712,14 +774,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 10, 2018 07:39:52 
+  Revised on January 12, 2018 15:55:02 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
