--- a/pages/18644.html
+++ b/pages/18644.html
@@ -325,7 +325,17 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<ul>
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -373,6 +383,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
 </li>
 
@@ -381,7 +395,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/microcausal+observable'>microcausal observables</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal observables</a></p>
 </li>
 
 <li>
@@ -491,7 +505,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
 </li>
 
 <li>
@@ -509,6 +523,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
 </li>
 
@@ -519,7 +537,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
@@ -648,7 +666,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In the formulation of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> various naive mathematical constructions give rise to ill-defined “<a class='existingWikiWord' href='/nlab/show/divergent+series'>divergent</a>” expressions.</p>
+<p>In the formulation of (<a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a>) <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> various naive mathematical constructions give rise to ill-defined “<a class='existingWikiWord' href='/nlab/show/divergent+series'>divergent</a>” expressions.</p>
 
 <p>Some of these occur in the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> that <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> points are taken <em>close</em> to each other. Since the short distances involved in this limit translate, under <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, to high <a class='existingWikiWord' href='/nlab/show/frequency'>frequencies</a>, these are called <em><a class='existingWikiWord' href='/nlab/show/ultraviolet+divergence'>ultraviolet divergences</a></em>. The correct way to deal with them is called <em><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></em>.</p>
 
@@ -751,14 +769,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  2, 2018 15:40:32 
+  Revised on January 12, 2018 15:59:56 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
