--- a/pages/18644.html
+++ b/pages/18644.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -676,9 +676,11 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<p>&gt; The <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Lee-Nauenberg theorem</a> is a fundamental quantum mechanical result which provides the standard theoretical response to the problem of collinear and infrared divergences. Its argument, that the divergences due to massless charged particles can be removed by summing over degenerate states, has been successfully applied to systems with final state degeneracies such as LEP processes. If there are massless particles in both the initial and final states, as will be the case at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, the theorem requires the incorporation of disconnected <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>diagrams</a> which produce connected interference effects at the level of the cross-section. However, this aspect of the theory has never been fully tested in the calculation of a cross-section. We show through explicit examples that in such cases the theorem introduces a divergent series of diagrams and hence fails to cancel the infrared divergences. It is also demonstrated that the widespread practice of treating soft infrared divergences by the <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Bloch-Nordsieck method</a> and handling collinear divergences by the Lee-Nauenberg method is not consistent in such cases.</p>
+<blockquote>
+<p>The <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Lee-Nauenberg theorem</a> is a fundamental quantum mechanical result which provides the standard theoretical response to the problem of collinear and infrared divergences. Its argument, that the divergences due to massless charged particles can be removed by summing over degenerate states, has been successfully applied to systems with final state degeneracies such as LEP processes. If there are massless particles in both the initial and final states, as will be the case at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, the theorem requires the incorporation of disconnected <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>diagrams</a> which produce connected interference effects at the level of the cross-section. However, this aspect of the theory has never been fully tested in the calculation of a cross-section. We show through explicit examples that in such cases the theorem introduces a divergent series of diagrams and hence fails to cancel the infrared divergences. It is also demonstrated that the widespread practice of treating soft infrared divergences by the <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Bloch-Nordsieck method</a> and handling collinear divergences by the Lee-Nauenberg method is not consistent in such cases.</p>
 
-<p>&gt; (<a href='#LavelleMcMullan05'>Lavelle-McMullan 05</a>)</p>
+<p>(<a href='#LavelleMcMullan05'>Lavelle-McMullan 05</a>)</p>
+</blockquote>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -694,7 +696,19 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<p>A famous approach to teh problem is due to</p>
+<p>Infrared divergences in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> were first observed in</p>
+
+<ul>
+<li id='Mott31'>
+<p>N. F. Mott, <em>On the influence of radiative forces on the scattering of electrons</em>, Proc. Camb. Phil. Soc. 27, 255 (1931).</p>
+</li>
+
+<li id='BlockNordsiek37'>
+<p><a class='existingWikiWord' href='/nlab/show/Felix+Bloch'>Felix Bloch</a> and <a class='existingWikiWord' href='/nlab/show/Arnold+Nordsieck'>Arnold Nordsieck</a>, <em>Note on the Radiation Field of the electron</em>, Phys. Rev. 52 , 54 (1937)</p>
+</li>
+</ul>
+
+<p>A famous approach to the problem is due to</p>
 
 <ul>
 <li id='FadeevKulish70'><a class='existingWikiWord' href='/nlab/show/Ludvig+Faddeev'>Ludwig Faddeev</a>, P. P. Kulish, <em>Asymptotic conditions and infrared divergences in quantum electrodynamics</em>, Theoretical and Mathematical Physics June 1970, Volume 4, Issue 2, pp 745–757 (<a href='http://www.mathnet.ru/php/archive.phtml?wshow=paper&amp;jrnid=tmf&amp;paperid=4141&amp;option_lang=eng'>mathnet.ru</a>, <a href='https://link.springer.com/article/10.1007%2FBF01066485'>springer</a>)</li>
@@ -732,16 +746,22 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>See also</p>
+<p>Further developments include</p>
 
 <ul>
+<li>
+<p>Daniel Kapec, Malcolm Perry, Ana-Maria Raclariu, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Infrared Divergences in QED, Revisited</em>, Phys. Rev. D 96, 085002 (2017) (<a href='https://arxiv.org/abs/1705.04311'>arXiv:1705.04311</a>)</p>
+</li>
+
 <li id='Strominger17'>
 <p><a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Lectures on the Infrared Structure of Gravity and Gauge Theory</em> (<a href='https://arxiv.org/abs/1703.05448'>arXiv:1703.05448</a>)</p>
 </li>
+</ul>
 
-<li>
-<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Infrared_divergence'>Infrared divergence</a></em></p>
-</li>
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Infrared_divergence'>Infrared divergence</a></em></li>
 </ul>
 
 <p>
@@ -769,7 +789,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 12, 2018 15:59:56 
+  Revised on January 12, 2018 16:36:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
