--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1121,7 +1121,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
@@ -1346,10 +1346,16 @@ margin-left: 0em;
 <li id='Hollands07'><a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, <em>Renormalized Quantum Yang-Mills Fields in Curved Spacetime</em>, Rev. Math. Phys. 20:1033-1172, 2008 (<a href='https://arxiv.org/abs/0705.3340'>arXiv:0705.3340</a>)</li>
 </ul>
 
-<p>Discussion of the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> (dealing with <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a>) is in</p>
+<p>Discussion of the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> and <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a>) includes</p>
 
 <ul>
-<li id='Duch17'><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</li>
+<li>
+<p>Daniel Kapec, Malcolm Perry, Ana-Maria Raclariu, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Infrared Divergences in QED, Revisited</em>, Phys. Rev. D 96, 085002 (2017) (<a href='https://arxiv.org/abs/1705.04311'>arXiv:1705.04311</a>)</p>
+</li>
+
+<li id='Duch17'>
+<p><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</p>
+</li>
 </ul>
 
 <h3 id='review'>Review</h3>
@@ -1367,6 +1373,10 @@ margin-left: 0em;
 
 <li id='Zeidler'>
 <p><a class='existingWikiWord' href='/nlab/show/Eberhard+Zeidler'>Eberhard Zeidler</a>, <em>Quantum field theory II: Quantum electrodynamics – A bridge between mathematicians and physicists</em>, Springer (2009)</p>
+</li>
+
+<li>
+<p>Einan Gardi, lectures 19, 20 of <em><a href='https://www2.ph.ed.ac.uk/~egardi/MQFT/'>Modern Quantum Field Theory</a></em>, 2015 (<a href='https://www2.ph.ed.ac.uk/~egardi/MQFT/MQFT_2015_lecture_19_20.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -1397,14 +1407,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2018 09:52:22 
+  Revised on January 12, 2018 16:42:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
